--- a/viz/index.html
+++ b/viz/index.html
@@ -12,9 +12,13 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-                    <h4>Top Spans</h4>
-                    <ul id="top-spans" class="list-group"></ul>
+                    <h4>Clusters</h4>
+                    <ul id="clusters" class="list-group"></ul>
                 </div>
+                <!--<div class="col-md-3">-->
+                    <!--<h4>Top Spans</h4>-->
+                    <!--<ul id="top-spans" class="list-group"></ul>-->
+                <!--</div>-->
                 <div class="col-md-6">
                     <h4>Document</h4>
                     <input id="show-attention" type="checkbox" class="custom-control-input">
@@ -27,6 +31,10 @@
                         <span class="glyphicon glyphicon-menu-right" style="vertical-align: -2px;"></span>
                     </button>
                     <p id="text" class="lead"></p>
+                </div>
+                <div class="col-md-3">
+                    <h4>Annotated Clusters</h4>
+                    <ul id="annotated-clusters" class="list-group"></ul>
                 </div>
                 <div class="col-md-3">
                     <h4>Predicted Clusters</h4>
